Tutorial message section styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="primary-header flex">
+    <header class="primary-header flex container">
         <section class="logo">
             <h1>CityClimates</h1>
         </section>
@@ -21,6 +21,18 @@
             <span class="slider"></span>
         </label>
     </header>
+
+    <main class="container">
+        <section class="tutorial-message flex">
+            <h2>Welcome to CityClimates!</h2>
+            <h5>To get started:</h5>
+            <ul>
+                <li>Enter the name of the first city in the <span>"Enter City 1"</span> field.</li>
+                <li>Enter the name of the second city in the <span>"Enter City 2"</span> field.</li>
+                <li>Explore the real-time weather conditions for both cities in the comparison section below.</li>
+            </ul>
+        </section>
+    </main>
 
 </body>
 
